--- a/ejemplos/ejemplo.2.2.html
+++ b/ejemplos/ejemplo.2.2.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     <h1>Ejemplo 2.2</h1>
+      <p>
+      Este es un párrafo muy pequeño.
+      </p>
     <canvas>
       ¡No funciona!
     </canvas>
