--- a/ejemplos/ejemplo.2.2.html
+++ b/ejemplos/ejemplo.2.2.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Ejemplo 2.2</h1>
       <p>
-      Este es un párrafo muy pequeño.
+      Esta página verifica si el navegador es capaz de desplegar de lienzos.
       </p>
     <canvas>
       ¡No funciona!
