--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
-<body>
-<p>Hola mundo</p>
-</body>
-</html>
+<p>Este es mi pequeño lugar en el Internet donde están los cursos que imparto. Por el momento, estoy impartiendo:</p>
+<ul>
+<li><a href="../cursos/csm/README.html">Control de sistemas mecatrónicos</a>.</li>
+<li><a href="../cursos/rv/README.html">Realidad virtual</a>.</li>
+</ul>
+<p>Si te interesa puedes revisar mi <a href="../cv/resumen.html">currículo vítae</a> y mi <a href="../cv/publicaciones.html">lista de publicaciones</a>.</p>
+<p>Me pueden contactar en twitter como @<a href="https://twitter.com/gaston_salazar">gaston_salazar</a> y en Facebook como <a href="https://facebook.com/ghsalazars">Gastón Salazar Silva</a>.</p>
+<h2 id="colofón">Colofón</h2>
+<p>Las <a href="./README.html">herramientas</a> usadas para crear este sitio son software de <a href="http://es.wikipedia.org/wiki/Software_libre_y_de_c%C3%B3digo_abierto">código libre y abierto</a>. El estilo del sitio busca centrarse en el contenido, tratando de <a href="http://tomayko.com/writings/administrative-debris">minimizar la interfaz</a>.</p>
