Se modificó site.css y se reconstruyó archivos consecuentemente.

--- a/README.html
+++ b/README.html
@@ -12,17 +12,23 @@
   <link rel="stylesheet" href="site/site.css" type="text/css" />
 </head>
 <body>
-<h1 id="gastón-h.-salazar-silva" class="title">Gastón H. Salazar Silva</h1>
-<p>Este es mi pequeño lugar en el Internet donde están los cursos que imparto. Por el momento, estoy impartiendo:</p>
+<h1 id="ghsalazar.github.io" class="title">ghsalazar.github.io</h1>
+<h2 id="gastón-h.-salazar-silva" class="author"><a href="http://ghsalazar.github.io">Gastón H. Salazar-Silva</a></h2>
+<p>Éste es mi sitio personal. Actualmente me encuentro en proceso de transferirlo a <a href="github.com">GitHub</a>.</p>
+<h2 id="herramientas">Herramientas</h2>
+<p>La mayoría del trabajo lo realizo en la distribución <a href="http://www.ubuntu.com/">Ubuntu</a> del sistema operativo <a href="http://es.wikipedia.org/wiki/GNU/Linux">GNU/Linux</a>. Mis principales herramientas son:</p>
 <ul>
-<li><a href="csm/README.html">Control de sistemas mecatrónicos</a>.</li>
-<li><a href="rv/README.html">Realidad virtual</a>.</li>
-<li>Control de máquinas eléctricas.</li>
+<li>El documento se produce originalmente en <a href="http://daringfireball.net/projects/markdown/">markdown</a>, el cual es un lenguaje de marcado muy sencillo,</li>
+<li>El documento se convierte a HTML por medio de <a href="http://johnmacfarlane.net/pandoc/">pandoc</a>, y</li>
+<li>El formato del documento producido se establece por medio de <a href="http://necolas.github.com/normalize.css/">normalize.css</a> y se ajusta para seguir las convenciones conocidas como <a href="http://ethanschoonover.com/solarized">solarized</a>.</li>
+<li>Para salvar a <a href="github.com">GitHub</a> los archivos, utilizo el comando <a href="git-scm.com">git(1)</a>.</li>
 </ul>
-<p>Si te interesa puedes revisar mi <a href="cv/resumen.html">currículo vítae</a> y mi <a href="cv/publicaciones.html">lista de publicaciones</a>.</p>
-<p>Me pueden contactar en twitter como @<a href="https://twitter.com/gaston_salazar">gaston_salazar</a> y en Facebook como <a href="https://facebook.com/ghsalazars">Gastón Salazar Silva</a>.</p>
-<h2 id="colofón">Colofón</h2>
-<p>Las <a href="./README.html">herramientas</a> usadas para crear este sitio son software de <a href="http://es.wikipedia.org/wiki/Software_libre_y_de_c%C3%B3digo_abierto">código libre y abierto</a>. El estilo del sitio busca centrarse en el contenido, tratando de <a href="http://tomayko.com/writings/administrative-debris">minimizar la interfaz</a>.</p>
+<p>Otras herramientas usadas como apoyo son:</p>
+<ul>
+<li>El editor <a href="http://www.gnu.org/software/emacs/">GNU Emacs</a>,</li>
+<li>El gestor de dependencias <a href="http://www.gnu.org/software/make/">GNU Make</a>, y</li>
+<li>El procesador de macros <a href="http://www.gnu.org/software/m4/">GNU M4</a>.</li>
+</ul>
 <div class="references">
 
 </div>
