Se modificó el estilo de las páginas y se actualizó la licencia.

--- a/README.html
+++ b/README.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="site/site.css" type="text/css" />
 </head>
 <body>
+<p><a href="http://ghsalazar.github.io">Gastón H. Salazar-Silva</a><br />2016-02-26</p>
 <h1 id="ghsalazar.github.io" class="title">ghsalazar.github.io</h1>
-<h2 id="gastón-h.-salazar-silva" class="author"><a href="http://ghsalazar.github.io">Gastón H. Salazar-Silva</a></h2>
 <p>Éste es mi sitio personal. Actualmente me encuentro en proceso de transferirlo a <a href="github.com">GitHub</a>.</p>
 <h2 id="herramientas">Herramientas</h2>
 <p>La mayoría del trabajo lo realizo en la distribución <a href="http://www.ubuntu.com/">Ubuntu</a> del sistema operativo <a href="http://es.wikipedia.org/wiki/GNU/Linux">GNU/Linux</a>. Mis principales herramientas son:</p>
@@ -32,6 +32,6 @@
 <div class="references">
 
 </div>
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">This site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="gaston_salazar@yahoo.com" property="cc:attributionName" rel="cc:attributionURL">Gastón Salazar-Silva</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/ghsalazar/ghsalazar.github.io.git" rel="dct:source">https://github.com/ghsalazar/ghsalazar.github.io.git</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">This site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="gaston_salazar@yahoo.com" property="cc:attributionName" rel="cc:attributionURL">Gastón Salazar-Silva</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
 </html>
