--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <link rel="stylesheet" href="site/site.css" type="text/css" />
 </head>
 <body>
-<h1 id="gastón-h.-salazar-silva" class="title">Gastón H. Salazar Silva</h1>
+<p>2016-02-26</p>
+<h1 id="gastón-h.-salazar-silva">Gastón H. Salazar Silva</h1>
 <p>Este es mi pequeño lugar en el Internet donde están los cursos que imparto. Por el momento, estoy impartiendo:</p>
 <ul>
 <li><a href="csm/README.html">Control de sistemas mecatrónicos</a>.</li>
@@ -26,6 +27,6 @@
 <div class="references">
 
 </div>
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">This site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="gaston_salazar@yahoo.com" property="cc:attributionName" rel="cc:attributionURL">Gastón Salazar-Silva</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="https://github.com/ghsalazar/ghsalazar.github.io.git" rel="dct:source">https://github.com/ghsalazar/ghsalazar.github.io.git</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">This site</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="gaston_salazar@yahoo.com" property="cc:attributionName" rel="cc:attributionURL">Gastón Salazar-Silva</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
 </body>
 </html>
