Se eliminó ".title".

--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <p><a href="http://ghsalazar.github.io">Gastón H. Salazar-Silva</a><br />2016-02-26</p>
-<h1 id="ghsalazar.github.io" class="title">ghsalazar.github.io</h1>
+<h1 id="ghsalazar.github.io">ghsalazar.github.io</h1>
 <p>Éste es mi sitio personal. Actualmente me encuentro en proceso de transferirlo a <a href="github.com">GitHub</a>.</p>
 <h2 id="herramientas">Herramientas</h2>
 <p>La mayoría del trabajo lo realizo en la distribución <a href="http://www.ubuntu.com/">Ubuntu</a> del sistema operativo <a href="http://es.wikipedia.org/wiki/GNU/Linux">GNU/Linux</a>. Mis principales herramientas son:</p>
