--- a/test/index.html
+++ b/test/index.html
@@ -5,9 +5,16 @@
     <meta charset="UTF-8">
   </head>
   <body>
-  <h1>Test of semantic html</h1>
-  <p>This text is an example of the aplication of <em>semantic web</em> as defined in
-  <a href="https://www.lifewire.com/why-use-semantic-html-3468271"><cite>Why Use Semantic HTML?</cite></a>
-  </p>
+    <article>
+      <header>
+        <h1>Test of semantic html</h1>
+      </header>
+      <p>This text is an example of the aplication of <em>semantic web</em> as defined in
+      <a href="https://www.lifewire.com/why-use-semantic-html-3468271"><cite>Why Use Semantic HTML?</cite></a>
+      </p>
+      <footer>
+        <p><time>2018-11-23</time></p>
+      </footer>
+    </article>
   </body>
 </html>
