--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Test of sematic html</title>
+    <title>Gastón H. SALAZAR SILVA</title>
     <meta charset="UTF-8">
   </head>
   <body>
